# kanden-koi-voltmind-hackathon-2026

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml  run_gpu.sh
audio_processing/: audio_processing.py  audio_processing.yaml
configs/: audio_processing.yaml  default.yaml  gen_prompt.yaml  prompt.yaml  prompt.yaml.bak
dataset/: extract_hazard_detection_dataset.py  images_to_videos.py
docs/: ARCHITECTURE.md  AUDIO_PROCESSING.md  DEMO_APP.md  EXTENDING.md  INSPESAFE_INTEGRATION.md  QUICK_START.md  README.md  SETUP.md  TROUBLESHOOTING.md  UV_VENV.md  VIDEO_GENERATION.md
finetuning/: README.md  train_dummy.py
finetuning/data/samples/: dummy_instructions.jsonl
scripts/: run_demo_batch.sh
scripts/depth_anything_3/: setup_external_deps.sh  smoke_test_da3.py
scripts/depth_anything_3/patches/: da3-numpy-compatibility.patch
scripts/sam3/patches/: sam3-numpy-compatibility.patch
slurm/: check.sh  gpu_2_check.sh  qwen_tts.sh  qwen_tts_server.sh  run_gpu.sh  vllm_h100_mig-402020.sh  vllm_h100_mig-402020_direct.sh  vllm_h100_singlegpu-2up.sh  vllm_qwen2_audio.sh  vllm_qwen2_light.sh  vllm_qwen3_5_light.sh  vllm_qwen3_light.sh  vllm_qwen3_lightAWQ.sh  vllm_qwen3_light_test.sh  vllm_qwen3vl_light.sh
src/: run.py
src/apps/: App.jsx  index.html  package-lock.json  package.json  server.py  vite.config.js
src/safety_agent/: __init__.py  agent.py  modality_nodes.py  perceiver.py  schema.py  schema_vllm.py  tts_narrator.py
src/tts/: __init__.py  server.py  synthesize.py
src/util/: __init__.py  logger.py  serializers.py
src/vis/: anomaly_viewer.py  viewer.py
tests/: conftest.py  test_audio_analyzer.py  test_config.py  test_e2e.py  test_llm_format.py  test_schema.py  test_tts_narrator.py
video_generation/: __init__.py  generate.py  generate_multi_seed.py
